[package]
name = "async-queues"
version = "0.1.0"
edition = "2021"
authors = ["Brian Martin <brian@iop.systems>"]
repository = "https://github.com/iopsystems/benchmarks"
license = "MIT OR Apache-2.0"

[dependencies]
async-broadcast = "0.6.0"
async-channel = "2.1.1"
async-std = { version = "1.12.0", features = ["tokio1"] }
broadcaster = { git = "https://github.com/brayniac/broadcaster" }
clap = { version = "4.4.18", features = ["derive"] }
flume = "0.11.0"
futures-lite = "2.2.0"
histogram = { version = "0.9.0", features = ["serde"] }
kanal = "0.1.0-pre8"
metriken = "0.5.1"
once_cell = "1.19.0"
postage = "0.5.0"
ratelimit = "0.9.0"
serde_json = "1.0.111"
splaycast = "0.2.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
widecast = { git = "https://github.com/Phantomical/widecast" }

[[bin]]
name = "async-queues"
path = "src/main.rs"
